--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,26 +8,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # ← Add this block:
+    env:
+      FRED_API_KEY: dummy
+
     strategy:
       matrix:
         python-version:
           - '3.9'
           - '3.10'
           - '3.11'
-# …snip…
+
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Smoke‑test import
         run: |
           python - << 'EOF'
@@ -35,5 +36,5 @@ jobs:
           import src.var_mc
           import src.valuation
           import src.dashboard
-          print("✅ Imports OK")
+          print("Imports OK")
           EOF
